--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -23,9 +23,7 @@
                 <span class="tag-default tag-pill"> <i class="ion-close-round"></i> tag </span>
               </div>
             </fieldset>
-            <button class="btn btn-lg pull-xs-right btn-primary" type="button">
-              <%= form.submit "Publish Article" %>
-            </button>
+              <%= form.submit "Publish Article", class: "btn btn-lg pull-xs-right btn-primary" %>
           </fieldset>
         <% end %>
       </div>
